# maverick-mcp

./: .dockerignore  .env.example  .gitignore  .pr-body.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_SETUP.md  Dockerfile  GEMINI.md  LICENSE  MANIFEST.in  Makefile  PARALLEL_RESEARCH_ENHANCEMENT.md  PLANS.md  README.md  SECURITY.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  pyrightconfig.json  server.json  setup.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  security_report.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  dep-smoke.yml  publish.yml
.jules/: bolt.md
alembic/: env.py
alembic/versions/: 0004_add_async_jobs.py  001_initial_schema.py  003_add_performance_indexes.py  005_add_user_table.py  006_rename_metadata_columns.py  007_enhance_audit_logging.py  008_performance_optimization_indexes.py  009_rename_to_supply_demand.py  010_self_contained_schema.py  011_remove_proprietary_terms.py  013_add_backtest_persistence_models.py  014_add_portfolio_models.py  08e3945a0c93_merge_heads.py  9374a5c9b679_merge_heads_for_testing.py  abf9b9afb134_merge_multiple_heads.py  adda6d3fd84b_merge_proprietary_terms_removal_with_.py  e0c75b0bdadb_fix_financial_data_precision_only.py  f0696e2cac15_add_essential_performance_indexes.py  f976356b6f07_add_refresh_tokens_and_audit_tables.py  fix_database_integrity_issues.py
benchmark_results/: speed_benchmark_quick_20250901_192643.json  speed_benchmark_quick_20250901_192643.md
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md
docs/: ARCHITECTURE.md  BACKTESTING.md  CATALOG.md  CONFIGURATION.md  COST_BASIS_SPECIFICATION.md  FINANCIALREPORTS_INTEGRATION.md  INDEX.md  PORTFOLIO.md  PORTFOLIO_PERSONALIZATION_PLAN.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  SETUP_SELF_CONTAINED.md  deep_research_agent.md  exa_research_testing_strategy.md  speed_testing_framework.md
docs/api/: backtesting.md
docs/audit/: 2026-04-14-mcp-audit-roadmap.md  follow-ups.md
docs/design-docs/: 2026-07-18-mcp-modernization.md
docs/exec-plans/: tech-debt-tracker.md
docs/features/: deep-research.md  portfolio.md
docs/product-specs/: index.md
docs/references/: llm-documentation-hygiene.md
docs/runbooks/: asyncio-systemexit.md  claude-desktop.md  database-setup.md  mcp-client-serialization.md  migrating-to-v1.md  otel-protobuf-crash.md  releasing.md  schwab.md  self-contained-setup.md  tiingo-loader.md  transient-loop-singletons.md
docs/testing/: README.md  exa-research.md  in-memory.md  integration.md  speed.md
examples/: agent_demo.py  complete_speed_validation.py  deep_research_integration.py  llm_optimization_example.py  llm_speed_demo.py  monitoring_example.py  parallel_research_example.py  queue_system_example.py  secure_server_example.py  server_multi_fix.py  speed_optimization_demo.py  timeout_fix_demonstration.py
maverick/: __init__.py
maverick/backtesting/: __init__.py  analysis.py  config.py  engine.py  optimization.py  service.py  service_ml.py  service_support.py  store.py  tools.py  tools_ml.py  tools_support.py  types.py
maverick/market_data/: __init__.py  config.py  data.py  fetchers.py  service.py  tools.py  types.py
maverick/platform/: __init__.py  cache.py  config.py  db.py  http.py  llm.py  serde.py  telemetry.py
maverick/portfolio/: __init__.py  analysis.py  config.py  data.py  journal.py  ledger.py  risk.py  service.py  service_journal.py  service_risk.py  service_watchlist.py  tools.py  tools_journal.py  types.py  watchlist.py
maverick/research/: __init__.py  config.py  (+4 more)
maverick_mcp/: README.md  __init__.py  dependencies.py  exceptions.py  logging_config.py
scripts/: INSTALLATION_GUIDE.md  README_STRATEGY_TESTING.md  README_TIINGO_LOADER.md  STRATEGY_TEST_SUMMARY.md  benchmark_exa_research.py  build_mcpb.py  check_mcp_descriptions.py  check_mcp_list_types.py  check_otel_versions.py  check_router_variants.py  claude_desktop_stdio_config.json  dev.sh  fix_connection_issues.py  generate-api-clients.sh  load_example.py  load_market_data.py  load_tiingo_data.py  migrate_db.py  migrate_error_handling.py  migrate_user_mapping.py  quick_speed_demo.py  record_indicator_fixtures.py  requirements_tiingo.txt  run-migrations.sh  run_exa_tests.py  run_stock_screening.py  schwab_auth_clipboard.py  security_maintenance.py  seed_db.py  seed_sp500.py  setup_database.sh  setup_self_contained.py  setup_sp500_database.sh  smoke_test_dev.sh  speed_benchmark.py  start-backend-api.sh  start-backend.sh  start-celery-beat.sh  start-celery-worker.sh  start-flower.sh  (+17 more)
stripe/: __init__.py
tests/: BILLING_TEST_COVERAGE_REPORT.md  README.md  conftest.py  test_adanos_sentiment_provider.py  test_agents_router_mcp.py  test_backtest_persistence.py  test_cache_cleanup.py  test_cache_management_service.py  test_cache_serialization.py  test_circuit_breaker.py  test_data_router.py  test_database_integrity.py.disabled  test_database_pool_config.py  test_database_pool_config_simple.py  test_dataframe_schemas.py  test_deep_research_functional.py  test_deep_research_integration.py  test_deep_research_parallel_execution.py  test_end_to_end_integration.py.disabled  test_error_handling.py  test_event_loop_integrity.py  test_exa_research_integration.py  test_exception_hierarchy.py  test_financial_search.py  test_finnhub_provider.py  test_finnhub_validation.py  test_fundamental_analysis.py  test_graceful_shutdown.py  test_health_check_probes.py  test_health_monitor_alerting.py  test_health_tools_router.py  test_integration_simple.py  test_intelligent_backtesting_router.py  test_introspection_router.py  test_langgraph_workflow.py  test_llm_factory.py  test_llm_settings.py  test_market_data_async.py  test_market_data_simple.py  test_mcp_list_coercion.py  (+51 more)
tools/: check_docs_catalog.py  check_orchestration_config.py  fast_dev.sh  hot_reload.py  quick_test.py
(+598 files in other folders)
