[project]
name = "maverick_mcp"
version = "0.1.0"
description = "Personal-use MCP server for Claude Desktop providing professional-grade stock analysis and technical indicators"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core MCP and server dependencies
    "fastmcp>=2.7.0",
    "mcp>=1.9.3",
    "fastapi>=0.115.12",
    "uvicorn>=0.35.0",
    "gunicorn>=23.0.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    # LangChain and AI dependencies
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.19",
    "langchain-mcp-adapters>=0.1.6",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-supervisor>=0.0.18",
    "anthropic>=0.52.2",
    "openai>=1.84.0",
    "tiktoken>=0.6.0",
    # Deep research dependencies
    "exa-py>=1.0.19",
    # Database and caching
    "sqlalchemy>=2.0.40",
    "alembic>=1.16.1",
    "psycopg2-binary>=2.9.10",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "redis>=6.2.0",
    "hiredis>=3.2.1",
    "msgpack>=1.0.7",
    "certifi>=2024.2.2",
    # Financial data and analysis (core)
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "yfinance>=0.2.63",
    "finvizfinance>=1.1.0",
    "pandas-ta>=0.3.14b0",
    "ta-lib>=0.6.3",
    # Backtesting
    "vectorbt>=0.26.0",
    "numba>=0.60.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "pytz>=2024.1",
    # Security (basic cryptography for data security)
    "cryptography>=42.0.0",
    # System monitoring (basic)
    "psutil>=6.0.0",
    "sentry-sdk[fastapi]>=2.22.0",
    # Prometheus metrics
    "prometheus-client>=0.21.1",
    # Trading
    "fredapi>=0.5.2",
    "pandas-datareader>=0.10.0",
    "pandas-market-calendars>=5.1.0",
    "tiingo>=0.16.1",
    # Visualization (essential only)
    "matplotlib>=3.10.3",
    "plotly>=5.0.0",
    "seaborn>=0.13.2",
    "kaleido>=0.2.1", # Required for Plotly image export
    # Development tools
    "watchdog>=6.0.0",
    "ty>=0.0.1a19",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "vcrpy>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.6.0",
    "testcontainers[postgres,redis]>=4.5.0",
    "vcrpy>=6.0.1",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "asyncpg>=0.30.0",
    "ruff>=0.11.10",
    "pyright>=1.1.400",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "types-requests>=2.31.0",
    "types-pytz>=2024.1.0",
    "pandas-stubs>=2.0.0",
    "msgpack-types>=0.7.0",
    "ty>=0.0.1a19",
]
vectors = [
    "chromadb>=0.5.0",
    # Regression guard: chromadb only caps opentelemetry-exporter-otlp-proto-grpc
    # at >=1.2.0, so uv's resolver has (rarely) picked 1.11.1 alongside a much
    # newer opentelemetry-api/sdk. That version ships _pb2.py files generated
    # with protoc<3.19 which the modern protobuf runtime rejects with
    # "Descriptors cannot be created directly". Pinning the exporter forces a
    # matched otel set and keeps protobuf on the 6.x line. See
    # docs/runbooks/otel-protobuf-crash.md.
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-proto>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

# Coverage config. The ``omit`` list exists to work around a coverage+
# beartype interaction: ``beartype``'s import-claw hook
# (``beartype.claw._clawimpload``) and ``coverage.py``'s trace function
# both intercept module imports, and under some ordering of the two the
# claw tries to import ``beartype.claw._clawstate`` while that module is
# still being initialised — ``ImportError: cannot import name
# 'claw_state' from partially initialized module``. Omitting beartype
# from coverage measurement sidesteps the collision without disabling
# coverage on our own code.
[tool.coverage.run]
source = ["maverick_mcp"]
branch = true
omit = [
    "*/beartype/*",
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/alembic/versions/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Markers for test categories
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "external: marks tests that require external APIs",
    "database: marks tests that require database access",
    "redis: marks tests that require Redis access",
]
# Default to running only unit tests
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-m", "not integration and not slow and not external",
    "--durations=10",  # Show 10 slowest tests
]
# Async configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Filter known-irreducible warnings. Each entry must have a comment justifying
# why the warning is suppressed rather than fixed.
filterwarnings = [
    # Pool size warnings are emitted *intentionally* by DatabasePoolConfig
    # validators when the configured pool size is below the expected demand.
    # `tests/test_database_pool_config*.py` exercise these scenarios on purpose
    # to verify the warnings fire — we don't want them in the summary on top
    # of the assertions that already check them.
    "ignore:Pool size .* may be insufficient for expected load:UserWarning",
    # pandas-ta still calls `pd.set_option('mode.copy_on_write', ...)` which is
    # a no-op (and Pandas4Warning) on pandas >= 3. Upstream issue, no action
    # we can take. Remove this line once pandas-ta drops the option.
    "ignore:The 'mode.copy_on_write' option is deprecated:DeprecationWarning",
    # testcontainers' `@wait_container_is_ready` decorator has been deprecated
    # in favor of structured wait strategies. Used transitively by our redis
    # testcontainer fixtures; upstream migration path is open. Re-evaluate when
    # we bump testcontainers.
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DTZ", # flake8-datetimez — forbid naive datetime constructors (utcnow, utcfromtimestamp)
    "ASYNC",  # flake8-async — flag blocking calls and deprecated asyncio patterns
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "W191",  # indentation contains tabs
    "DTZ005",  # datetime.now() without tz — too noisy for timestamps used as relative deltas
    "DTZ007",  # strptime without %z — many financial data sources omit timezone
    "DTZ011",  # date.today() — acceptable for date-only financial contexts
    "ASYNC109",  # timeout parameter naming — false positives on methods that implement timeout logic
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F403", "F405", "DTZ001"]  # star imports and naive datetime constructors allowed in tests
"maverick_mcp/tests/*" = ["F403", "F405", "DTZ001"]  # same for in-package tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
