[project]
name = "maverick_mcp"
version = "0.1.0"
description = "Personal-use MCP server for Claude Desktop providing professional-grade stock analysis and technical indicators"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core MCP and server dependencies
    "fastmcp>=3.3.1",
    "mcp>=1.27.1",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "gunicorn>=26.0.0",
    "python-multipart>=0.0.29",
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2,<4.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    # LangChain and AI dependencies
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-supervisor>=0.0.31",
    "anthropic>=0.104.1",
    "openai>=2.38.0",
    "tiktoken>=0.13.0",
    # Deep research dependencies
    "exa-py>=2.13.0",
    # Database and caching
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "greenlet>=3.5.1",
    "redis>=7.4.0",
    "hiredis>=3.3.1",
    "msgpack>=1.1.2",
    "certifi>=2026.5.20",
    # Financial data and analysis (core)
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "yfinance>=1.4.0",
    "finvizfinance>=1.3.0",
    "pandas-ta>=0.4.71b0",
    "ta-lib>=0.6.8",
    # Backtesting
    "vectorbt>=1.0.0",
    "numba>=0.61.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "pytz>=2026.2",
    # Security (basic cryptography for data security)
    "cryptography>=48.0.0",
    # System monitoring (basic)
    "psutil>=7.2.2",
    "sentry-sdk[fastapi]>=2.60.0",
    # Prometheus metrics
    "prometheus-client>=0.25.0",
    # Trading
    "fredapi>=0.5.2",
    "pandas-datareader>=0.10.0",
    "pandas-market-calendars>=5.4.0",
    "tiingo>=0.16.1",
    # Visualization (essential only)
    "matplotlib>=3.10.9",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "kaleido>=1.3.0", # Required for Plotly image export
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "testcontainers[postgres,redis]>=4.14.2",
    "vcrpy>=8.1.1",
    "watchdog>=6.0.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.1",
    "asyncpg>=0.31.0",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
    "bandit>=1.9.4",
    "safety>=3.7.0",
    "types-requests>=2.33.0.20260518",
    "types-pytz>=2026.2.0.20260518",
    "ty>=0.0.39",
]
vectors = [
    "chromadb>=1.5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Markers for test categories
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "external: marks tests that require external APIs",
    "database: marks tests that require database access",
    "redis: marks tests that require Redis access",
]
# Default to running only unit tests
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-m", "not integration and not slow and not external",
    "--durations=10",  # Show 10 slowest tests
]
# Async configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F403", "F405"]  # star imports allowed in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
