[project]
name = "maverick_mcp"
version = "0.1.0"
description = "Personal-use MCP server for Claude Desktop providing professional-grade stock analysis and technical indicators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core MCP and server dependencies
    "fastmcp>=3.3.1",
    "mcp>=1.28.1",
    "uvicorn>=0.48.0",
    "python-multipart>=0.0.31",
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "anthropic>=0.104.1",
    "openai>=2.38.0",
    # Database and caching
    "sqlalchemy>=2.0.50",
    "psycopg2-binary>=2.9.12",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "greenlet>=3.5.1",
    "redis>=7.4.0",
    "hiredis>=3.3.1",
    "msgpack>=1.2.1",
    "certifi>=2026.5.20",
    # Financial data and analysis (core)
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "yfinance>=1.4.0",
    "finvizfinance>=1.3.0",
    "pytz>=2026.2",
    # Security (basic cryptography for data security)
    "cryptography>=48.0.1",
    # System monitoring (basic)
    "psutil>=7.2.2",
    "pandas-market-calendars>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "testcontainers[postgres,redis]>=4.14.2",
    "vcrpy>=8.2.1",
    "watchdog>=6.0.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.1",
    "asyncpg>=0.31.0",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
    "bandit>=1.9.4",
    "safety>=3.7.0",
    "types-requests>=2.33.0.20260518",
    "types-pytz>=2026.2.0.20260518",
    "ty>=0.0.43",
]
vectors = [
    "chromadb>=1.5.9",
]
backtesting = [
    "vectorbt>=1.0.0",
    "numba>=0.61.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "pandas-ta>=0.4.71b0",
]
research = [
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "exa-py>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Markers for test categories
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "external: marks tests that require external APIs",
    "database: marks tests that require database access",
    "redis: marks tests that require Redis access",
]
# Default to running only unit tests
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-m", "not integration and not slow and not external",
    "--durations=10",  # Show 10 slowest tests
]
# Async configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F403", "F405"]  # star imports allowed in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "import-linter>=2.13",
]

[tool.importlinter]
root_packages = ["maverick"]

[[tool.importlinter.contracts]]
name = "Market data layers are forward-only"
type = "layers"
layers = [
    "maverick.market_data.tools",
    "maverick.market_data.service",
    "maverick.market_data.data | maverick.market_data.fetchers",
    "maverick.market_data.config",
    "maverick.market_data.types",
]

[[tool.importlinter.contracts]]
name = "Screening layers are forward-only"
type = "layers"
layers = [
    "maverick.screening.tools",
    "maverick.screening.service",
    "maverick.screening.data | maverick.screening.screens",
    "maverick.screening.config",
    "maverick.screening.types",
]

[[tool.importlinter.contracts]]
name = "Portfolio layers are forward-only"
type = "layers"
layers = [
    "maverick.portfolio.tools : maverick.portfolio.tools_journal",
    "maverick.portfolio.service : maverick.portfolio.service_risk : maverick.portfolio.service_watchlist : maverick.portfolio.service_journal",
    "maverick.portfolio.analysis | maverick.portfolio.risk",
    "maverick.portfolio.data | maverick.portfolio.ledger | maverick.portfolio.watchlist | maverick.portfolio.journal",
    "maverick.portfolio.config",
    "maverick.portfolio.types",
]

[[tool.importlinter.contracts]]
name = "Technical layers are forward-only"
type = "layers"
layers = [
    "maverick.technical.tools",
    "maverick.technical.service",
    "maverick.technical.indicators | maverick.technical.analysis",
    "maverick.technical.config",
    "maverick.technical.types",
]

[[tool.importlinter.contracts]]
name = "Backtesting layers are forward-only"
type = "layers"
layers = [
    "maverick.backtesting.tools : maverick.backtesting.tools_ml : maverick.backtesting.tools_support",
    "maverick.backtesting.service : maverick.backtesting.service_ml : maverick.backtesting.service_support",
    "maverick.backtesting.engine | maverick.backtesting.optimization | maverick.backtesting.analysis | maverick.backtesting.strategies",
    "maverick.backtesting.config",
    "maverick.backtesting.types",
]

[[tool.importlinter.contracts]]
name = "The platform never imports domains"
type = "forbidden"
source_modules = ["maverick.platform"]
forbidden_modules = ["maverick.market_data", "maverick.screening", "maverick.technical", "maverick.portfolio", "maverick.backtesting", "maverick.research", "maverick.server"]

[[tool.importlinter.contracts]]
name = "Nothing imports the server"
type = "forbidden"
source_modules = ["maverick.market_data", "maverick.screening", "maverick.portfolio", "maverick.technical", "maverick.backtesting", "maverick.research", "maverick.platform"]
forbidden_modules = ["maverick.server"]

[[tool.importlinter.contracts]]
name = "The technical indicator core never imports domains"
type = "forbidden"
source_modules = ["maverick.technical.indicators", "maverick.technical.analysis", "maverick.technical.config", "maverick.technical.types"]
forbidden_modules = ["maverick.market_data", "maverick.screening", "maverick.portfolio"]

[[tool.importlinter.contracts]]
name = "Technical service and tools never import screening or portfolio"
type = "forbidden"
source_modules = ["maverick.technical.service", "maverick.technical.tools"]
forbidden_modules = ["maverick.screening", "maverick.portfolio"]

[[tool.importlinter.contracts]]
name = "The backtesting core never imports domains"
type = "forbidden"
source_modules = ["maverick.backtesting.engine", "maverick.backtesting.optimization", "maverick.backtesting.analysis", "maverick.backtesting.strategies", "maverick.backtesting.config", "maverick.backtesting.types"]
forbidden_modules = ["maverick.market_data", "maverick.screening", "maverick.portfolio"]

[[tool.importlinter.contracts]]
name = "Backtesting service and tools never import screening or portfolio"
type = "forbidden"
source_modules = ["maverick.backtesting.service", "maverick.backtesting.service_ml", "maverick.backtesting.service_support", "maverick.backtesting.tools", "maverick.backtesting.tools_ml", "maverick.backtesting.tools_support"]
forbidden_modules = ["maverick.screening", "maverick.portfolio"]

[[tool.importlinter.contracts]]
name = "Research layers are forward-only"
type = "layers"
layers = [
    "maverick.research.tools",
    "maverick.research.service : maverick.research.service_support",
    "maverick.research.agents | maverick.research.providers",
    "maverick.research.config",
    "maverick.research.types",
]

[[tool.importlinter.contracts]]
name = "The research core never imports domains"
type = "forbidden"
source_modules = ["maverick.research.agents", "maverick.research.providers", "maverick.research.config", "maverick.research.types"]
forbidden_modules = ["maverick.market_data", "maverick.screening", "maverick.portfolio", "maverick.technical", "maverick.backtesting"]

[[tool.importlinter.contracts]]
name = "Research service and tools never import other domains"
type = "forbidden"
source_modules = ["maverick.research.service", "maverick.research.service_support", "maverick.research.tools"]
forbidden_modules = ["maverick.screening", "maverick.portfolio", "maverick.technical", "maverick.backtesting"]
